# 3DBoids

./: CMakeLists.txt  README.md  build.sh  install-openmp.sh  new-build.sh
src/: boids.c  boids.h  lighting.fs  lighting.vs  main.c  show_source.sh  spatial_hash.c  spatial_hash.h  torus.c  torus.h
